# rob_auto_cal

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  package.xml
include/rob-auto-cal/: gpoproblem.h  gposolver_base.h  logging.h
include/trans_calc/: gposolver_csdp.h  gposolver_mosek.h  gposolver_sdpa.h
launch/: 1394_cam_rob_conf_finder.launch  IDS_rob_conf_finder.launch  IDShandEyeUR10.launch  IDShandEyeUR10autoCylendar.launch  IDShandEyeUR10autoCylinder.launch  IDShandEyeUR10autoSquare.launch  IDSworldEyeUR10autoSquare.launch  IDSworldEyeUR10manuel.launch  RG_control.launch  auto_cal_sequence_ur10.launch  camera1394_launch.launch  chessboard_move_ur10.launch  guppyhandEyeUR10.launch  guppyhandEyeUR10autoCylinder.launch  handEyeUR10.launch  logJointsAndTransform.launch  move_blocks.launch  move_ur10.launch  ueye_launch.launch  ur10_joint_publish.launch  ur_10_joint_publish.launch  usb_cam-test.launch  usb_cam_rob_conf_finder.launch  worldEyeUR10.launch  worldEyeUR10auto.launch
src/nodes/: GR2_control.cpp  auto_cal_sequence_ur10.cpp  backup_chessboard_move_ur10.cpp  chess_correspond.cpp  chess_features.cpp  chess_pickup_sequence.cpp  chess_trans_finder.cpp  chessboard_move_ur10.cpp  image_publisher.cpp  move_ur10.cpp  save_data_node.cpp  save_joints_node.cpp  save_trans_node.cpp  save_vects_node.cpp  trans_calc_test.cpp  world_chessboard_move_ur10.cpp
src/nodes/trans_calc/: herwc_problem3.cpp  herwc_problem3.h  herwc_solver.cpp
srv/: reqChessTransform.srv  reqSquareTrans.srv  reqTransCalc.srv
